# stock-django-be

./: .env.example  .gitignore  README.md  pyproject.toml
myapp/: models.py  serializers.py  urls.py  views.py
myapp/migrations/: 0001_initial.py
myproject/: settings.py  urls.py
